Updated npm packages and widgets

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "@inspark/widget-common": "0.0.9",
+    "@inspark/widget-common": "0.1.15",
+    "@inspark/components-web": "^0.1.21",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
