--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.13.0",
     "primeng": "^7.1.2",
     "protractor": "~5.4.0",
     "raw-loader": "^0.5.1",
